--- a/servicesCOSMETIC.html
+++ b/servicesCOSMETIC.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 
 .image1 {
@@ -52,7 +53,6 @@
   padding: 3vH 3vH;
   text-decoration: none;
   position: relative;
-
 }
 
 .dropdown {
@@ -82,14 +82,11 @@
   font-family: inherit;
   margin: 0;
   cursor: pointer;
- 
-
 }
+
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: transparent;
 }
-
-
 
 .dropdown-content {
   display: none;
@@ -132,62 +129,6 @@
   box-shadow:0 5px #555;
   transform: translateY(4px);
 }
-</style>
-</head>
-
-
-<body>
-<header class="main-header">
-  <div class="container1">
-    <h1 class="mh-logo">
-      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
-    </h1>
-    <nav class="main-nav">
-      <ul class="main-nav-list">
-        <div class="navbar">
-            <a href="https://www.rateabiz.com/reviews/chiyo-shidara-dds-douglas-gordon-dds-pinole-ca/f974c6fa3a2698fb7a2bc820ae471cf5/summary" >
-              <button class="button" style="border-style: double; border-color:gray; position: relative; top: -12px;">Schedule Appointment</button>
-            </a>
-            <a href="contactUs.html" style=" ">Contact Us</a>
-            <div class="dropdown">
-              <button class="dropbtn" class="button">Services
-                  <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                  <a href="servicesGENERAL.html">General Dentistry</a>
-                  <a href="servicesCOSMETIC.html">Cosmetics</a>
-              </div>
-            </div> 
-            <div class="dropdown">
-              <button class="dropbtn">For Patients
-                  <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                  <a href="forPatientsNEW.html">New Patients</a>
-                  <a href="forPatientsPAYMENT.html">Payment and Insurance</a>
-              </div>
-            </div> 
-            <div class="dropdown">
-              <button class="dropbtn">About Us
-                  <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                  <a href="aboutUsMeetTheTeam.html">Meet the Team</a>
-                  <a href="aboutUsReviews.html">Reviews</a>
-              </div>
-            </div> 
-            <a href="index.html">Home</a>
-        </div>
-      </ul>
-    </nav>
-  </div>
-</header>
-</body>
-
-<hr style=" position: relative; width: 100%; top: -5vH;">
-
-
-<style>
 
 .container2 {
   position: relative;
@@ -243,46 +184,7 @@
   font-size: 2.8vH;
   font-family: Helvetica;
 }
-</style>
 
-<body>
-<div class="container2">
-    <img src="./Pictures%20for%20the%20Website/IMG_1996.jpg" style="width: 100%; height: 60vH;" class = "image">
-    <div style= "position:absolute; top:0; width:100%; height:100%; background-color:black; opacity:0.40;"></div>
- 
-    <div class = "centeredTop"> Cosmetic Dental Services </div>
-    
-</div>
-
-<div class="flex-container">
-  <div style="background-color:#FEFAAE; color:gray; padding:3vH;">
-    <h2 style="color: #4787B0;font-family: Lora, Georgia;font-size: 5vH; font-style: italic;">Invisalign</h2>
-    <p class="descriptionText"> In addition to correcting crooked teeth, Invisalign can improve bite functions, preventing further oral health issues such as cavities, gum infections, and erosion of tooth enamel amongst other things.  We offer a complimentary consultation for interested patients.  </p>
-  </div>
-  <div style="background-color:#4787B0;color:white;padding:20px;"> 
-    <h2 style="color: white;font-family: Lora, Georgia;font-size: 5vH;font-style: italic; text-align: center; line-height: 25px;"> Veneers</h2>
-  
-    <p class="descriptionText">  There are many advantages to veneering. In addition to covering chipped or stained teeth, veneers can restore and strengthen worn enamel. We use biocompatible material to create personalized veneers for each of our patients and ensure comfort during and after the procedure. </p>
-
-  </div>
-  <div style="background-color:#FEFAAE;color: gray; padding:20px;">
-   <h2 style="color: #4787B0;font-family: Lora, Georgia;font-size: 5vH; font-style: italic; line-height: 4vH;">Teeth Whitening</h2>
-  <p class="descriptionText"> We utilize several different teeth whitening procedures depedning on our patients' preferences. Please consult with Dr. Shidara and staff if you are interested. </p>
-  </div> 
-</div>
-</body>
-
-<br>
-<br>
-
-<p style = "color: #4787B0; text-align: center; padding-left: 26%; padding-right: 26%; font-size: 2.8vH; "> Whatever your concern, we welcome the opprtunity to work with you. Please don't hesitate to call us to set up an appointment ~ <a href="tel:1-510-741-7100" style="color: #4787B0;">(510)741-7100</a>
-</p>
-
-<br>
-<br>
-
-
-<style>
 
 .footer {
    position: relative;
@@ -325,8 +227,90 @@
 }
 
 </style>
+</head>
 
 <body>
+<header class="main-header">
+  <div class="container1">
+    <h1 class="mh-logo">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+    </h1>
+    <nav class="main-nav">
+      <ul class="main-nav-list">
+        <div class="navbar">
+            <a href="https://www.rateabiz.com/reviews/chiyo-shidara-dds-douglas-gordon-dds-pinole-ca/f974c6fa3a2698fb7a2bc820ae471cf5/summary" >
+              <button class="button" style="border-style: double; border-color:gray; position: relative; top: -12px;">Schedule Appointment</button>
+            </a>
+            <a href="contactUs.html" style=" ">Contact Us</a>
+            <div class="dropdown">
+              <button class="dropbtn" class="button">Services
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                  <a href="servicesGENERAL.html">General Dentistry</a>
+                  <a href="servicesCOSMETIC.html">Cosmetics</a>
+              </div>
+            </div> 
+            <div class="dropdown">
+              <button class="dropbtn">For Patients
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                  <a href="forPatientsNEW.html">New Patients</a>
+                  <a href="forPatientsPAYMENT.html">Payment and Insurance</a>
+              </div>
+            </div> 
+            <div class="dropdown">
+              <button class="dropbtn">About Us
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                  <a href="aboutUsMeetTheTeam.html">Meet the Team</a>
+                  <a href="aboutUsReviews.html">Reviews</a>
+              </div>
+            </div> 
+            <a href="index.html">Home</a>
+        </div>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<hr style=" position: relative; width: 100%; top: -5vH;">
+
+<div class="container2">
+  <img src="./Pictures%20for%20the%20Website/IMG_1996.jpg" style="width: 100%; height: 60vH;" class = "image">
+  <div style= "position:absolute; top:0; width:100%; height:100%; background-color:black; opacity:0.40;"></div>
+  <div class = "centeredTop"> Cosmetic Dental Services </div>  
+</div>
+
+<div class="flex-container">
+  <div style="background-color:#FEFAAE; color:gray; padding:3vH;">
+    <h2 style="color: #4787B0;font-family: Lora, Georgia;font-size: 5vH; font-style: italic;">Invisalign</h2>
+    <p class="descriptionText"> In addition to correcting crooked teeth, Invisalign can improve bite functions, preventing further oral health issues such as cavities, gum infections, and erosion of tooth enamel amongst other things.  We offer a complimentary consultation for interested patients.  </p>
+  </div>
+  <div style="background-color:#4787B0;color:white;padding:20px;"> 
+    <h2 style="color: white;font-family: Lora, Georgia;font-size: 5vH;font-style: italic; text-align: center; line-height: 25px;"> Veneers</h2>
+  
+    <p class="descriptionText">  There are many advantages to veneering. In addition to covering chipped or stained teeth, veneers can restore and strengthen worn enamel. We use biocompatible material to create personalized veneers for each of our patients and ensure comfort during and after the procedure. </p>
+
+  </div>
+  <div style="background-color:#FEFAAE;color: gray; padding:20px;">
+   <h2 style="color: #4787B0;font-family: Lora, Georgia;font-size: 5vH; font-style: italic; line-height: 4vH;">Teeth Whitening</h2>
+  <p class="descriptionText"> We utilize several different teeth whitening procedures depedning on our patients' preferences. Please consult with Dr. Shidara and staff if you are interested. </p>
+  </div> 
+</div>
+
+<br>
+<br>
+
+<p style = "color: #4787B0; text-align: center; padding-left: 26%; padding-right: 26%; font-size: 2.8vH; "> Whatever your concern, we welcome the opprtunity to work with you. Please don't hesitate to call us to set up an appointment ~ <a href="tel:1-510-741-7100" style="color: #4787B0;">(510)741-7100</a>
+</p>
+
+<br>
+<br>
+
+<div>
 <ul class="footer" style="font-family: Helvetica; " >
   <li class="footerElementsHours">M, W, Th, F : 8am - 5pm <br> T, Sat : By Appointment Only</li>
   <li class="footerElements"> 2150 Appian Way #208 Pinole, CA 94564 </li>
@@ -334,9 +318,8 @@
   <li class="footerElements"> Fax: (510) 741 - 7335</li>
   <li class="footerElements"> smilepinole@gmail.com</li>
 </ul>
+</div>
 
 </body>
-
-
 </html>
 
