--- a/aboutUsReviews.html
+++ b/aboutUsReviews.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 
 .image1 {
@@ -82,14 +83,11 @@
   font-family: inherit;
   margin: 0;
   cursor: pointer;
- 
-
 }
+
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: transparent;
 }
-
-
 
 .dropdown-content {
   display: none;
@@ -132,9 +130,82 @@
   box-shadow:0 5px #555;
   transform: translateY(4px);
 }
+
+.button25 {
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3vH;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; 
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.button5 {
+  background-color: white;
+  color: black;
+  border: double #555555;
+  position: relative;
+  float: center;
+
+}
+.button5:hover {
+  background-color: #bdbdbd;
+  color: white;
+}
+.quote {
+  color: #4787B0;
+  font-size: 2.75vH;
+  font-family: Georgia;
+}
+
+
+.footer {
+   position: relative;
+   width: 100%;
+   background-color: gray;
+   color: white;
+   list-style-type: none;
+   text-align: center;
+   margin: 0;
+   padding: 3vH;
+   bottom: 0;
+}
+
+.footerElements {
+  display: inline-block;
+  font-size: 2.0vH;
+  padding-left: 4vH;
+  padding-right: 4vH;
+  position: relative;
+  text-align: center;
+}
+
+.footerElementsHours {
+  display: inline-block;
+  font-size: 2vH;
+  padding-left: 4vH;
+  padding-right: 3vH;
+  position: relative;
+  text-align: left;
+}
+
+
+@media (max-width:500vH max-height: 500vH;) {
+  .footer .footerElements .footerElementsHours {
+    display: block;
+    width: 100%;
+    margin-bottom: 2vH;
+    text-align: center;
+  }
+}
+
 </style>
 </head>
-
 
 <body>
 <header class="main-header">
@@ -182,47 +253,12 @@
     </nav>
   </div>
 </header>
-</body>
+
 
 <hr style=" position: relative; width: 100%; top: -5vH;">
 
-<style>
-
-.button25 {
-  background-color: #4CAF50; 
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 3vH;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; 
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-.button5 {
-  background-color: white;
-  color: black;
-  border: double #555555;
-  position: relative;
-  float: center;
-
-}
-.button5:hover {
-  background-color: #bdbdbd;
-  color: white;
-}
-.quote {
-  color: #4787B0;
-  font-size: 2.75vH;
-  font-family: Georgia;
-}
-
-</style>
 </head>
-<body>
+
 <div class="quote">
   <p style="text-align: center; padding-right: 120px; padding-left: 120px;">"To the person, this is a superb place to receive dental services. Dr. Shidara is a painless and highly skilled dentist. The assistants Craig and Tiara are very capable and considerate. And Margot, the receptionist sets a very good tone for the entire office."<br><p style="text-align: right; padding-right: 200px; padding-bottom: 25px;"> ~ Eve C.</p></p>
   <hr style=" position: relative; width: 90%;">
@@ -232,76 +268,30 @@
   <p style=" text-align: center; padding-right: 120px; padding-left: 120px; padding-top: 50px;">"Very professional. I have experienced many dental offices and trust me she DR. SHIDARA is my only dentist that surpasses all the rest in East bay area. The location is ideal, clean, organized. Not to mention the staff is wonderful and love my hygienist too. If you want professionalism go no where else I'm sure you will be satisfied!" <br> <p style="text-align: right; padding-right: 200px; padding-bottom: 25px;"> ~ Sean S.</p>
   </p>
   <hr style=" position: relative; width: 90%;">
+
   <br>
 
 </div>
-</body>
 
 <div style="text-align: center;">
   <a href="https://www.rateabiz.com/reviews/chiyo-shidara-dds-douglas-gordon-dds-pinole-ca/f974c6fa3a2698fb7a2bc820ae471cf5/summary">
-    <button class="button25 button5" href="">Read More Reviews</button>
+    <button class="button25 button5">Read More Reviews</button>
   </a>
 </div>
 
-
 <br>
 <br>
 
-<style>
-
-.footer {
-   position: relative;
-   width: 100%;
-   background-color: gray;
-   color: white;
-   list-style-type: none;
-   text-align: center;
-   margin: 0;
-   padding: 3vH;
-   bottom: 0;
-}
-
-.footerElements {
-  display: inline-block;
-  font-size: 2.0vH;
-  padding-left: 4vH;
-  padding-right: 4vH;
-  position: relative;
-  text-align: center;
-}
-
-.footerElementsHours {
-  display: inline-block;
-  font-size: 2vH;
-  padding-left: 4vH;
-  padding-right: 3vH;
-  position: relative;
-  text-align: left;
-}
-
-
-@media (max-width:500vH max-height: 500vH;) {
-  .footer .footerElements .footerElementsHours {
-    display: block;
-    width: 100%;
-    margin-bottom: 2vH;
-    text-align: center;
-  }
-}
-
-</style>
-
-<body>
-<ul class="footer" style="font-family: Helvetica; " >
+<div>
+<ul class="footer" style="font-family: Helvetica;">
   <li class="footerElementsHours">M, W, Th, F : 8am - 5pm <br> T, Sat : By Appointment Only</li>
   <li class="footerElements"> 2150 Appian Way #208 Pinole, CA 94564 </li>
   <li class="footerElements"> Phone: (510) 741 - 7100 </li>
   <li class="footerElements"> Fax: (510) 741 - 7335</li>
   <li class="footerElements"> smilepinole@gmail.com</li>
 </ul>
+</div>
 
 </body>
-
-
 </html>
 
